# deng-task

./: .dockerignore  .env  Dockerfile  Makefile  README.md  compose.dev.yml  compose.yml  main.py  pyproject.toml
.github/workflows/: pytest.yml
flaskr/: __init__.py  db.py  iris.py  schema.sql
tests/: conftest.py
